<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.scopyk.fydeph.MainActivity" >
    
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/filters"/>
    
    <item
        android:id="@+id/action_unlock"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/unlock"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/settings"/>
    
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/logout"/>

  	<item android:id="@+id/action_fav"
          android:icon="@drawable/ic_unfav"
          android:title="@string/favorite"
          
          app:showAsAction="always"
          android:enabled="true" android:visible="true"/>
  	
  	<item android:id="@+id/action_unread"
          android:icon="@drawable/ic_unread"
          android:title="@string/unread"
          
          app:showAsAction="always"
          android:enabled="true" android:visible="true"/>

</menu>
